nodeport-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx-service-canary"
  namespace: "default"
spec:
  ports:
    - port: 80
      nodePort: 80
  type: NodePort
  selector:
    app: my-nginx
    release: canary
