service-canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-canary
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-nginx
    release: canary
  type: ClusterIP
