ingress-canary.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-canary
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: canary
    nginx.ingress.kubernetes.io/canary-by-header-value: always
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  defaultBackend:
    service:
      name: nginx-service-canary
      port:
        number: 80
  rules:
  - #host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-canary
            port:
              number: 80
