ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: nginx-service-stable
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-stable
            port:
              number: 80
  - http:
      paths:
      - path: /canary
        pathType: Prefix
        backend:
          service:
            name: nginx-service-canary
            port:
              number: 80
---

#apiVersion: v1
#kind: Service
#metadata:
#  name: default-http-backend
#  labels:
#    app: my-nginx
#    release: stable
#spec:
#  ports:
#  - port: 80
#    targetPort: 80
#  type: NodePort
#  selector:
#    app: my-nginx
#    release: stable
